package lapr4.jobs4u.jobopeningmanagement.domain;

public class RequirementSpecification {
    //TODO: to be implemented
}
